turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:8: error: type mismatch;
 found   : Int
 required: java.awt.Color
  if (ci==colors.length-1) {colorie(rule(state)(0)(0))} else {colorie (rule(state)(ci+1)(0))}
                                                  ^Turmite:8: error: type mismatch;
 found   : Int
 required: java.awt.Color
  if (ci==colors.length-1) {colorie(rule(state)(0)(0))} else {colorie (rule(state)(ci+1)(0))}
                                                                                        ^